--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <div class="layout">    
     <!-- Painel Esquerdo -->
     <div class="painel-esquerdo">
-            <h1 style="font-family: Arial, sans-serif; font-size: 20px; text-align: center; background-color: #f1ab13; color: white; border-radius: 8px;">
+            <h1 style="font-family: Arial, sans-serif; font-size: 20px; text-align: center; background-color: #f8922c; color: white; border-radius: 8px;">
          Painel de Opções
       </h1><br>
       
