--- a/public/index.html
+++ b/public/index.html
@@ -1609,15 +1609,16 @@
 </div>      
      
        <div style="margin-top: 5px; text-align: left;">
-        <button style="margin-left: 1px;" id="btnFinalizarFi" class="botao-azul">Finalizar</button>         
-        <button style="margin-left: 1px;" id="btnFinalizarFc" class="botao-azul">Finalizar</button>         
-        <button style="margin-left: 1px;" id="btnFinalizar" class="botao-azul">Finalizar</button>         
-        <button style="margin-left: 1px;" id="btnFinalizarOs" class="botao-azul">Finalizar</button>         
-        <button style="margin-left: 1px;" id="btnFinalizarOsOs" class="botao-azul">Finalizar</button>         
-        <button style="margin-left: 1px;"id="btnCancelar" class="botao-azul">Cancelar</button>            
-        <button style="margin-left: 1px;"id="btnCancelarv" class="botao-azul">Cancelar</button>            
-        <button style="margin-left: 1px;"id="btnCancelaros" class="botao-azul">Cancelar</button>            
-       </div>  
+          <button class="botao-azul btn-pequeno">Finalizar</button>
+          <button class="botao-azul btn-pequeno">Finalizar</button>
+          <button class="botao-azul btn-pequeno">Finalizar</button>
+          <button class="botao-azul btn-pequeno">Finalizar</button>
+          <button class="botao-azul btn-pequeno">Finalizar</button>
+
+          <button class="botao-azul btn-pequeno" style="margin-left:1px">Cancelar</button>
+          <button class="botao-azul btn-pequeno" style="margin-left:1px">Cancelar</button>
+          <button class="botao-azul btn-pequeno" style="margin-left:1px">Cancelar</button>
+        </div>
       </div>
 
      </div>      
