--- a/public/index.html
+++ b/public/index.html
@@ -502,7 +502,7 @@
     border-collapse: collapse;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
-    font-size: 12px;
+    font-size: 8px;
     background-color: #fff;
     border: 1px solid #ccc;
   ">
@@ -659,7 +659,7 @@
     border-collapse: collapse;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
-    font-size: 12px;
+    font-size: 8px;
     background-color: #fff;
   ">
     <thead style="background-color: #f1ab13; color: white;">
@@ -804,7 +804,7 @@
     border-collapse: collapse;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
-    font-size: 12px;
+    font-size: 8px;
     background-color: #fff;
     border: 1px solid #ccc;
   ">
@@ -898,7 +898,7 @@
     border-collapse: collapse;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
-    font-size: 12px;
+    font-size: 8px;
     background-color: #fff;
     border: 1px solid #ccc;
   ">
@@ -937,7 +937,7 @@
     border-collapse: collapse;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
-    font-size: 12px;
+    font-size: 8px;
     background-color: #fff;
   ">
     <thead style="background-color: #f1ab13; color: #fff;">
@@ -1079,7 +1079,7 @@
       border-collapse: collapse;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
       font-family: Arial, sans-serif;
-      font-size: 12px;
+      font-size: 8px;
       background-color: #fff;
     ">
       <thead style="background-color: #f1ab13; color: white;">
@@ -1139,7 +1139,7 @@
     border-collapse: collapse;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
-    font-size: 12px;
+    font-size: 8px;
     background-color: #fff;
   ">
     <thead style="background-color: #f1ab13; color: #fff;">
@@ -1215,7 +1215,7 @@
       border-collapse: collapse;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
       font-family: Arial, sans-serif;
-      font-size: 12px;
+      font-size: 8px;
       background-color: #fff;
     ">
       <thead style="background-color: #f1ab13; color: white;">
@@ -1609,16 +1609,15 @@
 </div>      
      
        <div style="margin-top: 5px; text-align: left;">
-          <button class="botao-azul btn-pequeno">Finalizar</button>
-          <button class="botao-azul btn-pequeno">Finalizar</button>
-          <button class="botao-azul btn-pequeno">Finalizar</button>
-          <button class="botao-azul btn-pequeno">Finalizar</button>
-          <button class="botao-azul btn-pequeno">Finalizar</button>
-
-          <button class="botao-azul btn-pequeno" style="margin-left:1px">Cancelar</button>
-          <button class="botao-azul btn-pequeno" style="margin-left:1px">Cancelar</button>
-          <button class="botao-azul btn-pequeno" style="margin-left:1px">Cancelar</button>
-        </div>
+        <button style="margin-left: 1px;" id="btnFinalizarFi" class="botao-azul">Finalizar</button>         
+        <button style="margin-left: 1px;" id="btnFinalizarFc" class="botao-azul">Finalizar</button>         
+        <button style="margin-left: 1px;" id="btnFinalizar" class="botao-azul">Finalizar</button>         
+        <button style="margin-left: 1px;" id="btnFinalizarOs" class="botao-azul">Finalizar</button>         
+        <button style="margin-left: 1px;" id="btnFinalizarOsOs" class="botao-azul">Finalizar</button>         
+        <button style="margin-left: 1px;"id="btnCancelar" class="botao-azul">Cancelar</button>            
+        <button style="margin-left: 1px;"id="btnCancelarv" class="botao-azul">Cancelar</button>            
+        <button style="margin-left: 1px;"id="btnCancelaros" class="botao-azul">Cancelar</button>            
+       </div>  
       </div>
 
      </div>      
