Refatorando tamano botoes

--- a/public/index.html
+++ b/public/index.html
@@ -1608,7 +1608,7 @@
        Total Geral: R$ <span id="total-geral">0.00</span>
 </div>      
      
-       <div style="margin-top: 5px; text-align: left;">
+       <div style="margin-top: 5px; text-align: left; font-size: 8px;">
         <button style="margin-left: 1px;" id="btnFinalizarFi" class="botao-azul">Finalizar</button>         
         <button style="margin-left: 1px;" id="btnFinalizarFc" class="botao-azul">Finalizar</button>         
         <button style="margin-left: 1px;" id="btnFinalizar" class="botao-azul">Finalizar</button>         
