--- a/public/index.html
+++ b/public/index.html
@@ -1608,16 +1608,32 @@
        Total Geral: R$ <span id="total-geral">0.00</span>
 </div>      
      
-       <div style="margin-top: 5px; text-align: left; font-size: 8px;">
-        <button style="margin-left: 1px;" id="btnFinalizarFi" class="botao-azul">Finalizar</button>         
-        <button style="margin-left: 1px;" id="btnFinalizarFc" class="botao-azul">Finalizar</button>         
-        <button style="margin-left: 1px;" id="btnFinalizar" class="botao-azul">Finalizar</button>         
-        <button style="margin-left: 1px;" id="btnFinalizarOs" class="botao-azul">Finalizar</button>         
-        <button style="margin-left: 1px;" id="btnFinalizarOsOs" class="botao-azul">Finalizar</button>         
-        <button style="margin-left: 1px;"id="btnCancelar" class="botao-azul">Cancelar</button>            
-        <button style="margin-left: 1px;"id="btnCancelarv" class="botao-azul">Cancelar</button>            
-        <button style="margin-left: 1px;"id="btnCancelaros" class="botao-azul">Cancelar</button>            
-       </div>  
+       <div style="margin-top:5px; text-align:left;">
+  <button style="font-size:8px; padding:2px 4px; height:20px; line-height:1;"
+    id="btnFinalizarFi" class="botao-azul">Finalizar</button>
+
+  <button style="font-size:8px; padding:2px 4px; height:20px; line-height:1;"
+    id="btnFinalizarFc" class="botao-azul">Finalizar</button>
+
+  <button style="font-size:8px; padding:2px 4px; height:20px; line-height:1;"
+    id="btnFinalizar" class="botao-azul">Finalizar</button>
+
+  <button style="font-size:8px; padding:2px 4px; height:20px; line-height:1;"
+    id="btnFinalizarOs" class="botao-azul">Finalizar</button>
+
+  <button style="font-size:8px; padding:2px 4px; height:20px; line-height:1;"
+    id="btnFinalizarOsOs" class="botao-azul">Finalizar</button>
+
+  <button style="font-size:8px; padding:2px 4px; height:20px; line-height:1;"
+    id="btnCancelar" class="botao-azul">Cancelar</button>
+
+  <button style="font-size:8px; padding:2px 4px; height:20px; line-height:1;"
+    id="btnCancelarv" class="botao-azul">Cancelar</button>
+
+  <button style="font-size:8px; padding:2px 4px; height:20px; line-height:1;"
+    id="btnCancelaros" class="botao-azul">Cancelar</button>
+</div>
+
       </div>
 
      </div>      
