--- a/public/index.html
+++ b/public/index.html
@@ -1608,31 +1608,33 @@
        Total Geral: R$ <span id="total-geral">0.00</span>
 </div>      
      
-       <div style="margin-top:5px; text-align:left;">
-  <button style="font-size:12px; padding:2px 4px; height:20px; line-height:1;"
+ <div style="margin-top:5px; text-align:left;">
+  <button style="font-size:14px; padding:4px 8px; height:40px; min-width:120px; line-height:1.2;"
     id="btnFinalizarFi" class="botao-azul">Finalizar</button>
 
-  <button style="font-size:12px; padding:2px 4px; height:20px; line-height:1;"
+  <button style="font-size:14px; padding:4px 8px; height:40px; min-width:120px; line-height:1.2;"
     id="btnFinalizarFc" class="botao-azul">Finalizar</button>
 
-  <button style="font-size:12px; padding:2px 4px; height:20px; line-height:1;"
+  <button style="font-size:14px; padding:4px 8px; height:35px; min-width:100px; line-height:1.2;"
     id="btnFinalizar" class="botao-azul">Finalizar</button>
 
-  <button style="font-size:12px; padding:2px 4px; height:20px; line-height:1;"
+  <button style="font-size:14px; padding:4px 8px; height:35px; min-width:80px; line-height:1.2;"
     id="btnFinalizarOs" class="botao-azul">Finalizar</button>
 
-  <button style="font-size:12px; padding:2px 4px; height:20px; line-height:1;"
+  <button style="font-size:14px; padding:4px 8px; height:35px; min-width:80px; line-height:1.2;"
     id="btnFinalizarOsOs" class="botao-azul">Finalizar</button>
 
-  <button style="font-size:12px; padding:2px 4px; height:20px; line-height:1;"
+  <button style="margin-left: 15px; font-size:14px; padding:4px 8px; height:35px; min-width:100px; line-height:1.2;"
     id="btnCancelar" class="botao-azul">Cancelar</button>
 
-  <button style="font-size:12px; padding:2px 4px; height:20px; line-height:1;"
+  <button style="margin-left: 15px;font-size:14px; padding:4px 8px; height:35px; min-width:100px; line-height:1.2;"
     id="btnCancelarv" class="botao-azul">Cancelar</button>
 
-  <button style="font-size:12px; padding:2px 4px; height:20px; line-height:1;"
+  <button style="margin-left: 15px;font-size:14px; padding:4px 8px; height:35px; min-width:100px; line-height:1.2;"
     id="btnCancelaros" class="botao-azul">Cancelar</button>
 </div>
+
+
 
       </div>
 
