--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<!--  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' http://localhost:3000;">-->
-
   <meta charset="UTF-8">
   <title>Oriente System</title>
   <link rel="stylesheet" href="estilo.css">
@@ -16,7 +14,7 @@
            <label style="color: black;" id="nomeemitente">Emitente:</label>          
        </div>        
         <h3 style="position: absolute; left: 50%; transform: translateX(-50%); margin: 0;">
-        🌐 Sistema de Gestão Comercial Oriente      </h3>
+        🌐 Gestão Comercial Oriente </h3>
         <!-- Campo do usuário à direita -->
         <div style="display: flex; align-items: center; gap: 8px;">
           <label style="color: white;" for="nomeusuarios">Usuário Logado:</label>
