Cuadricula das grades

--- a/public/index.html
+++ b/public/index.html
@@ -500,7 +500,7 @@
     border-collapse: collapse;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
-    font-size: 8px;
+    font-size: 12px;
     background-color: #fff;
     border: 1px solid #ccc;
   ">
@@ -657,7 +657,7 @@
     border-collapse: collapse;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
-    font-size: 8px;
+    font-size: 12px;
     background-color: #fff;
   ">
     <thead style="background-color: #f1ab13; color: white;">
@@ -802,7 +802,7 @@
     border-collapse: collapse;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
-    font-size: 8px;
+    font-size: 12px;
     background-color: #fff;
     border: 1px solid #ccc;
   ">
@@ -896,7 +896,7 @@
     border-collapse: collapse;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
-    font-size: 8px;
+    font-size: 12px;
     background-color: #fff;
     border: 1px solid #ccc;
   ">
@@ -935,7 +935,7 @@
     border-collapse: collapse;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
-    font-size: 8px;
+    font-size: 12px;
     background-color: #fff;
   ">
     <thead style="background-color: #f1ab13; color: #fff;">
@@ -1077,12 +1077,12 @@
       border-collapse: collapse;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
       font-family: Arial, sans-serif;
-      font-size: 8px;
+      font-size: 12px;
       background-color: #fff;
     ">
       <thead style="background-color: #f1ab13; color: white;">
         <tr>
-          <th style="padding: 10px; text-align: left;">
+          <th style="padding: 10px; text-align: center;">
             <input type="checkbox" id="checkTodos" title="Selecionar todas" />
           </th>          
           <th style="padding: 10px; border: 1px solid #ddd; text-align: center;">Controle</th>
@@ -1137,7 +1137,7 @@
     border-collapse: collapse;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
-    font-size: 8px;
+    font-size: 12px;
     background-color: #fff;
   ">
     <thead style="background-color: #f1ab13; color: #fff;">
@@ -1213,12 +1213,12 @@
       border-collapse: collapse;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
       font-family: Arial, sans-serif;
-      font-size: 8px;
+      font-size: 12px;
       background-color: #fff;
     ">
       <thead style="background-color: #f1ab13; color: white;">
         <tr>
-          <th style="padding: 10px; text-align: left;">
+          <th style="padding: 10px; text-align: center;">
             <input type="checkbox" id="checkTodos1" title="Selecionar todas" />
           </th>
           <th style="padding: 10px; border: 1px solid #ddd;text-align: center">Controle</th>
