Cor painel dereito

--- a/public/index.html
+++ b/public/index.html
@@ -1551,7 +1551,7 @@
 
     <!-- Painel Direito -->
     <div id="formPainel" style="display: none;" class="painel-direito tw-w-full tw-w-max[425px]">      
-      <h1 style="font-size: 20px; text-align: center;background-color: #f1ab13;color: white; border-radius: 8px;">Painel de Operações</h1><br><br>
+      <h1 style="font-size: 20px; text-align: center;background-color: #f8922c;color: white; border-radius: 8px;">Painel de Operações</h1><br><br>
       <div id="resultado" style="font-size: 22px;">
     </div>
     
@@ -1606,30 +1606,30 @@
        Total Geral: R$ <span id="total-geral">0.00</span>
 </div>      
      
- <div style="margin-top:5px; text-align:left;">
-  <button style="font-size:14px; padding:4px 8px; height:40px; min-width:80px; line-height:1.2;"
-    id="btnFinalizarFi" class="botao-azul">Finalizar</button>
+ <div style="margin-top:5px; text-align:center;">
+  <button style="font-size:14px; padding:4px 8px; height:40px; min-width:80px; line-height:1.2;text-align:center;"
+    id="btnFinalizarFi" class="botao-laranja">Finalizar</button>
 
-  <button style="font-size:14px; padding:4px 8px; height:40px; min-width:80px; line-height:1.2;"
-    id="btnFinalizarFc" class="botao-azul">Finalizar</button>
+  <button style="font-size:14px; padding:4px 8px; height:40px; min-width:80px; line-height:1.2;text-align:center;"
+    id="btnFinalizarFc" class="botao-laranja">Finalizar</button>
 
-  <button style="font-size:14px; padding:4px 8px; height:35px; min-width:80px; line-height:1.2;"
-    id="btnFinalizar" class="botao-azul">Finalizar</button>
+  <button style="font-size:14px; padding:4px 8px; height:35px; min-width:80px; line-height:1.2; text-align:center;"
+    id="btnFinalizar" class="botao-laranja">Finalizar</button>
 
-  <button style="font-size:14px; padding:4px 8px; height:35px; min-width:80px; line-height:1.2;"
-    id="btnFinalizarOs" class="botao-azul">Finalizar</button>
+  <button style="font-size:14px; padding:4px 8px; height:35px; min-width:80px; line-height:1.2;text-align:center;"
+    id="btnFinalizarOs" class="botao-laranja">Finalizar</button>
 
-  <button style="font-size:14px; padding:4px 8px; height:35px; min-width:80px; line-height:1.2;"
-    id="btnFinalizarOsOs" class="botao-azul">Finalizar</button>
+  <button style="font-size:14px; padding:4px 8px; height:35px; min-width:80px; line-height:1.2;text-align:center;"
+    id="btnFinalizarOsOs" class="botao-laranja">Finalizar</button>
 
-  <button style="margin-left: 10px; font-size:14px; padding:4px 8px; height:35px; min-width:80px; line-height:1.2;"
-    id="btnCancelar" class="botao-azul">Cancelar</button>
+  <button style="margin-left: 10px; font-size:14px; padding:4px 8px; height:35px; min-width:80px; line-height:1.2;text-align:center;"
+    id="btnCancelar" class="botao-laranja">Cancelar</button>
 
-  <button style="margin-left: 10px;font-size:14px; padding:4px 8px; height:35px; min-width:80px; line-height:1.2;"
-    id="btnCancelarv" class="botao-azul">Cancelar</button>
+  <button style="margin-left: 10px;font-size:14px; padding:4px 8px; height:35px; min-width:80px; line-height:1.2;text-align:center;"
+    id="btnCancelarv" class="botao-laranja">Cancelar</button>
 
-  <button style="margin-left: 10px;font-size:14px; padding:4px 8px; height:35px; min-width:80px; line-height:1.2;"
-    id="btnCancelaros" class="botao-azul">Cancelar</button>
+  <button style="margin-left: 10px;font-size:14px; padding:4px 8px; height:35px; min-width:80px; line-height:1.2;text-align:center;"
+    id="btnCancelaros" class="botao-laranja">Cancelar</button>
 </div>
 
 
