Ordem receber e pagar

--- a/public/index.html
+++ b/public/index.html
@@ -1223,7 +1223,7 @@
           </th>
           <th style="padding: 10px; border: 1px solid #ddd;text-align: center">Controle</th>
           <th style="padding: 10px; border: 1px solid #ddd; text-align: center">Funcionário</th>
-          <th style="padding: 10px; border: 1px solid #ddd; text-align: center">Cliente</th>
+          <th style="padding: 10px; border: 1px solid #ddd; text-align: center">Fornecedor</th>
           <th style="padding: 10px; border: 1px solid #ddd;text-align: center">Valor Original</th>
           <th style="padding: 10px; border: 1px solid #ddd;text-align: center">Valor Pago</th>
           <th style="padding: 10px; border: 1px solid #ddd;text-align: center;">Parcela Nº</th>
@@ -1562,7 +1562,7 @@
       <div style="display: flex; gap: 30px; margin-top: 20px;">       
         <div>
           <label style="font-size: 14px;" for="desconto">Desconto:</label><br>
-          <input type="number" id="desconto" placeholder="R$ 0,00" step="0.01" style="width: 80px;text-align: right">
+          <input type="number" id="desconto" placeholder="R$ 0,00" step="0.01" style="width: 78px;text-align: right">
           <label style="margin-left: 1px;">
           <input type="checkbox" id="descontoPorcentagem"> %
           </label>
@@ -1570,7 +1570,7 @@
         
         <div>
           <label style="font-size: 14px;" for="acrescimo">Acréscimo:</label><br>
-          <input type="number" id="acrescimo" placeholder="R$ 0,00" step="0.01" style="width: 80px;text-align: right">
+          <input type="number" id="acrescimo" placeholder="R$ 0,00" step="0.01" style="width: 78px;text-align: right">
           <label style="margin-left: 1px;">
           <input type="checkbox" id="acrescimoPorcentagem"> %
           </label>
