Evitar apagar caixa e receber

--- a/public/index.html
+++ b/public/index.html
@@ -926,6 +926,7 @@
     <label><input type="radio" name="filtroStatus" value="todos" checked> Todas</label>
     <label style="margin-left: 15px;"><input type="radio" name="filtroStatus" value="aberto"> Abertas</label>
     <label style="margin-left: 15px;"><input type="radio" name="filtroStatus" value="pago"> Pagas</label>
+    <label style="margin-left: 15px;"><input type="radio" name="filtroStatus" value="cancelado"> Canceladas</label>
   </div>
 
   <table id="tabelaReceber" style="
@@ -1294,8 +1295,7 @@
         <th style="padding: 10px; border: 1px solid #ccc;">Espécies</th>
         <th style="padding: 10px; border: 1px solid #ccc;">Valor de Entrada</th>
         <th style="padding: 10px; border: 1px solid #ccc;">Valor de Saída</th>
-        <th style="padding: 10px; border: 1px solid #ccc;">Data de Cadastro</th>
-        <th style="padding: 10px; border: 1px solid #ccc;">Ações</th>
+        <th style="padding: 10px; border: 1px solid #ccc;">Data de Cadastro</th>        
       </tr>
     </thead>
     <tbody>
