Trocar botão excluir por cancelar

--- a/public/index.html
+++ b/public/index.html
@@ -1129,6 +1129,7 @@
     <label><input type="radio" name="filtroStatusPagar" value="todos" checked> Todas</label>
     <label style="margin-left: 15px;"><input type="radio" name="filtroStatusPagar" value="aberto"> Abertas</label>
     <label style="margin-left: 15px;"><input type="radio" name="filtroStatusPagar" value="pago"> Pagas</label>
+    <label style="margin-left: 15px;"><input type="radio" name="filtroStatusPagar" value="cancelado"> Canceladas</label>
   </div>
 
   <table id="tabelaPagar" style="
