Tamanho do login

--- a/public/index.html
+++ b/public/index.html
@@ -968,15 +968,15 @@
                        align-items: flex-start; /* Começa do topo */  justify-content: center; 
                         padding-top: 80px; /* Controla a distância do topo */
                         font-family: 'Segoe UI', sans-serif;">
-      <div style="background: #fff; padding: 40px; border-radius: 12px; box-shadow: 0 3px 9px rgba(0,0,0,0.15); width: 320px; text-align: center;">
-        <h2 style="margin-bottom: 24px; color: #ebba50;">Entrar no Sistema</h2>
+      <div style="background: #fff; padding: 25px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.15); width: 250px;text-align: center;">
+        <h2 style="margin-bottom: 15px; color: #ebba50;">Credenciáis</h2>
         <form onsubmit="return validarLogin()">
           <input type="text" id="usuario" placeholder="Usuário" required
-          style="width: 100%; padding: 12px; margin-bottom: 18px; border: 1px solid #ccc; border-radius: 6px; font-size: 14px;" />
+          style="width: 100%; padding: 12px; margin-bottom: 10px; border: 1px solid #ccc; border-radius: 6px; font-size: 14px;" />
           <input type="password" id="senha" placeholder="Senha" required
-          style="width: 100%; padding: 12px; margin-bottom: 18px; border: 1px solid #ccc; border-radius: 6px; font-size: 14px;" />
+          style="width: 100%; padding: 12px; margin-bottom: 10px; border: 1px solid #ccc; border-radius: 6px; font-size: 14px;" />
           <input type="submit" value="Login"
-          style="width: 100%; padding: 12px; border: none; background-color: #f7c65d; color: white; border-radius: 6px; font-size: 16px; cursor: pointer;" />
+          style="width: 100%; padding: 12px; border: none; background-color: #f7c65d; color: white; border-radius: 6px; font-size: 14px; cursor: pointer;" />
         </form>
       <div style="margin-top: 20px; font-size: 13px; color: #666;">
       © 2025 - Sistema Comercial
