--- a/public/index.html
+++ b/public/index.html
@@ -477,7 +477,6 @@
   </tbody>
 </table>
 
-
   <div style="margin-top: 20px;">
     <button onclick="voltarCliente()" class="botao-azul">⬅️ Voltar ao Cliente</button>
   </div>
@@ -964,19 +963,19 @@
   <div id="paginacaoReceber" style="text-align: center; margin-top: 15px;"></div>
 </div>
 
-   <div id="formLogin" style="display: none;  width: 100%;  height: 170%;  background: linear-gradient(135deg, #ebd496, #f7c76e);  
+   <div id="formLogin" style="display: none;  width: 100%;  height: 170%;  background: linear-gradient(135deg, #bed7f3, #7bb3f1);  
                        align-items: flex-start; /* Começa do topo */  justify-content: center; 
                         padding-top: 80px; /* Controla a distância do topo */
                         font-family: 'Segoe UI', sans-serif;">
       <div style="background: #fff; padding: 25px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.15); width: 250px;text-align: center;">
-        <h2 style="margin-bottom: 15px; color: #ebba50;">Credenciáis</h2>
+        <h2 style="margin-bottom: 15px; color: rgb(2, 2, 71);">Credenciáis</h2>
         <form onsubmit="return validarLogin()">
           <input type="text" id="usuario" placeholder="Usuário" required
           style="width: 100%; padding: 12px; margin-bottom: 10px; border: 1px solid #ccc; border-radius: 6px; font-size: 14px;" />
           <input type="password" id="senha" placeholder="Senha" required
           style="width: 100%; padding: 12px; margin-bottom: 10px; border: 1px solid #ccc; border-radius: 6px; font-size: 14px;" />
           <input type="submit" value="Login"
-          style="width: 100%; padding: 12px; border: none; background-color: #f7c65d; color: white; border-radius: 6px; font-size: 14px; cursor: pointer;" />
+          style="width: 100%; padding: 12px; border: none; background-color: rgb(8, 8, 233); color: white; border-radius: 6px; font-size: 14px; cursor: pointer;" />
         </form>
       <div style="margin-top: 20px; font-size: 13px; color: #666;">
       © 2025 - Sistema Comercial
