Trocar cor e arrumar datas

--- a/public/index.html
+++ b/public/index.html
@@ -503,7 +503,7 @@
     background-color: #fff;
     border: 1px solid #ccc;
   ">
-    <thead style="background-color: #f1ab13; color: white;">
+    <thead style="background-color: rgb(2, 2, 71); color: white;">
       <tr>
         <th style="padding: 10px; border: 1px solid #ccc;">CPF</th>
         <th style="padding: 10px; border: 1px solid #ccc;">CNPJ</th>
@@ -659,7 +659,7 @@
     font-size: 12px;
     background-color: #fff;
   ">
-    <thead style="background-color: #f1ab13; color: white;">
+    <thead style="background-color: rgb(2, 2, 71); color: white;">
       <tr>        
         <th style="padding: 10px; border: 1px solid #ccc;">Controle</th>
         <th style="padding: 10px; border: 1px solid #ccc;">Produto</th>
@@ -805,7 +805,7 @@
     background-color: #fff;
     border: 1px solid #ccc;
   ">
-    <thead style="background-color: #f1ab13; color: white;">
+    <thead style="background-color: rgb(2, 2, 71); color: white;">
       <tr>
         <th style="padding: 10px; border: 1px solid #ccc;">CPF</th>
         <th style="padding: 10px; border: 1px solid #ccc;">RG</th>
@@ -899,7 +899,7 @@
     background-color: #fff;
     border: 1px solid #ccc;
   ">
-    <thead style="background-color: #f1ab13; color: white;">
+    <thead style="background-color: rgb(2, 2, 71); color: white;">
       <tr>
         <th style="padding: 10px; border: 1px solid #ccc;">CNPJ</th>
         <th style="padding: 10px; border: 1px solid #ccc;">IE</th>
@@ -938,7 +938,7 @@
     font-size: 12px;
     background-color: #fff;
   ">
-    <thead style="background-color: #f1ab13; color: #fff;">
+    <thead style="background-color: rgb(2, 2, 71); color: #fff;">
       <tr>
         <th style="padding: 10px; border: 1px solid #ddd; text-align: center;">Controle</th>
         <th style="padding: 10px; border: 1px solid #ddd; text-align: center;">Funcionário</th>
@@ -963,11 +963,11 @@
   <div id="paginacaoReceber" style="text-align: center; margin-top: 15px;"></div>
 </div>
 
-   <div id="formLogin" style="display: none;  width: 100%;  height: 170%;  background: linear-gradient(135deg, #bed7f3, #7bb3f1);  
+   <div id="formLogin" style="display: none;  width: 100%;  height: 170%;  background: linear-gradient(135deg, white, white);  
                        align-items: flex-start; /* Começa do topo */  justify-content: center; 
                         padding-top: 80px; /* Controla a distância do topo */
                         font-family: 'Segoe UI', sans-serif;">
-      <div style="background: #fff; padding: 25px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.15); width: 250px;text-align: center;">
+      <div style="background: #fff; padding: 25px; border-radius: 12px; box-shadow: 0 6px 14px black; width: 250px;text-align: center;">
         <h2 style="margin-bottom: 15px; color: rgb(2, 2, 71);">Credenciáis</h2>
         <form onsubmit="return validarLogin()">
           <input type="text" id="usuario" placeholder="Usuário" required
@@ -1062,7 +1062,7 @@
       padding: 6px 15px; 
       font-size: 14px; 
       cursor: pointer;
-      background-color: #f1ab13; 
+      background-color: rgb(8, 8, 233); 
       border: none; 
       color: white;
       border-radius: 5px;
@@ -1080,7 +1080,7 @@
       font-size: 12px;
       background-color: #fff;
     ">
-      <thead style="background-color: #f1ab13; color: white;">
+      <thead style="background-color: rgb(2, 2, 71); color: white;">
         <tr>
           <th style="padding: 10px; text-align: center;">
             <input type="checkbox" id="checkTodos" title="Selecionar todas" />
@@ -1141,7 +1141,7 @@
     font-size: 12px;
     background-color: #fff;
   ">
-    <thead style="background-color: #f1ab13; color: #fff;">
+    <thead style="background-color: rgb(2, 2, 71); color: #fff;">
       <tr>
         <th style="padding: 10px; border: 1px solid #ddd; text-align: center;">Controle</th>
         <th style="padding: 10px; border: 1px solid #ddd; text-align: center;">Funcionário</th>
@@ -1196,7 +1196,7 @@
         padding: 6px 15px; 
         font-size: 14px; 
         cursor: pointer;
-        background-color:#f1ab13; 
+        background-color:rgb(8, 8, 233); 
         border: none; 
         color: white;
         border-radius: 5px;
@@ -1217,7 +1217,7 @@
       font-size: 12px;
       background-color: #fff;
     ">
-      <thead style="background-color: #f1ab13; color: white;">
+      <thead style="background-color: rgb(2, 2, 71); color: white;">
         <tr>
           <th style="padding: 10px; text-align: center;">
             <input type="checkbox" id="checkTodos1" title="Selecionar todas" />
@@ -1285,7 +1285,7 @@
     background-color: #fff;
     border: 1px solid #ccc;
   ">
-    <thead style="background-color: #f1ab13; color: white;">
+    <thead style="background-color: rgb(2, 2, 71); color: white;">
       <tr>
         <th style="padding: 10px; border: 1px solid #ccc;">Controle</th>
         <th style="padding: 10px; border: 1px solid #ccc;">Funcionário</th>
